# pomo-cli

./: .rustfmt.toml  Cargo.toml  README.md  justfile
docs/: sqlite.md
src/: cli.rs  error.rs  error.rs.bak  lib.rs  utils.rs
src/cli/: fast_log_lib.rs  humantime_serde_lib.rs
src/notification/: mod.rs  notify.rs
