[package]
name = "pompom"
version = "0.1.0"
edition = "2021"
description = """
pomo_cli is a terminal pomodoro CLI app that vocally reminds you
while running gracefully in the background.
"""
homepage = "https://github.com/lloydlobo/pomo_cli"
author = ["lloydlobo"]
categories = ["command-line-utilities", "command-line-interface" ]
keywords = ["cli","notification", "pomodoro", "tasks", "time", "productivity", "terminal", "terminal-app"]
readme = "README.md"
# publish = false
license = "MIT"

exclude = [
    "assets/*",
    "tests/*",
    "scripts/*",
    # "target",
    # "Cargo.lock",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
chrono-tz = "0.8.1"
clap-verbosity-flag = "2.0.0"
colored = "2.0.0"
indicatif = "0.17.3"
log = "0.4.17"
notify-rust = "4.7.0"
pretty_env_logger = "0.4.0"
serde_json = "1.0.91"
spinners = "4.1.0"
thiserror = "1.0.38"
xshell = "0.2.3"
# termcolor = "1.2.0"
# dirs = "4.0.0"
# atty = "0.2.14"
# lazy_static = "1.4.0"
# semver = "1.0.16"
# humantime = "2.1.0"
# humantime-serde = "1.1.1"
# logging_timer = "1.1.0"

[dependencies.bincode]
version = "2.0.0-rc.1"
features = ["alloc"]

[dependencies.clap]
version = "4.1.1"
features = ["derive", "suggestions"]

[dependencies.crossterm]
version = "0.25.0"
features = ["event-stream"]

[dependencies.miette]
version = "5.5.0"
features = ["fancy"]

[dependencies.reqwest]
version = "0.11.13"
features = ["json"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.tabled]
version = "0.10.0"
features = ["color"]

[dependencies.tokio]
version = "1.24.2"
features = ["sync", "macros", "rt-multi-thread", "time"]

# [dependencies.fast_log]
# version = "1.5.51"
# features = ["lz4", "zip", "gzip"]

[dev-dependencies]
tempfile = "3.3.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.release]
debug = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
